--- a/lambdas/python/index.html
+++ b/lambdas/python/index.html
@@ -17,7 +17,7 @@
         <input type="button" onclick="showTable()" value="Get Table">
     </form>
     <br>
-    <div id="txtHint">Table info will be listed here...</div>
+    <div>Table info will be listed here...</div>
     <table id="users"><tr></tr></table>
     <script>
         const url = "YOUR_LAMBDA_URL";
